--- a/.Net Review.md
+++ b/.Net Review.md
@@ -97,3 +97,27 @@
   - intrinsic support for *multicasting* and *asynchronous method invocation*
 
 
+### CTS Type Members
+
+### Intrinsic CTS Data Types
+
+- All .NET language keywords ultimately resolve to the same CTS type defined in an `mscorlib.dll` assembly
+
+## CLS (Common Language Specification)
+
+- **CLS** is a set of rules that describe in vivid details the minimal and complete set of features a given .NET-aware compiler must support to produce code that can be hosted by CLR
+- *CLS can be thought as a subset of the full functionality defined by the CTS*
+- CTS's Rules:
+  - *CTS rules apply only to those parts of a type that are exposed outside the defining assembly*
+- CLS Compliance
+
+## CLR
+
+- *runtime*: a collection of services that are required to execute a given compiled unit of code
+
+## Other
+
+- *namespace*: grouping of semantically related types contained in an assembly or possibly spread across multiple related assemblies
+- accessing namespace:
+  - `using`
+  - *fully qualified name*: `System.Console.WriteLine`
