--- a/.Net Review.md
+++ b/.Net Review.md
@@ -15,6 +15,8 @@
 - CLS: Common Language Specification:
   - Not all .NET language support every feature defined by the CTS
   - CLS is related specification that defines a subset of **common types** and **programming constructs** that all .NET programming language agree on
+- The Relation:
+  - CLR = CLI = CTS + CLS + JIT + VES
 
 ## BCL: Base Class Libraries
 
@@ -49,6 +51,20 @@
 - An Assembly contains CIL and Metadata
 - Assemblies are also described using metadata, called *manifest*
 
+### JIT
+
+- aka Dynamic translation
+- for improving the runtime performance of a computer program
+- Drawbacks:
+  - *startup time delay*
+- Advantages:
+  - The compilation can be optimized
+  - System is able to collect statistics
+
+### VES (Virtual Execution System)
+
+- provides an environment for executing managed code
+
 ### CIL
 
 - Each .NET compilers for different languages compiles nearly identical CIL instructions
@@ -58,7 +74,7 @@
 
 ### .NET Type Metadata
 
-- describe every type defined in the binary
+- describe every type defined in the binary (language-agnostic)
 - describe members of each type
 - Emitting latest + greatest metadata is the job of compiler
 
