done data types

--- a/.Net Review.md
+++ b/.Net Review.md
@@ -137,3 +137,135 @@
 - accessing namespace:
   - `using`
   - *fully qualified name*: `System.Console.WriteLine`
+
+---
+
+# Data Types
+
+- in C#, data types keyword is the shorthand notations for full-blown types in the `System` namespace
+- `int myAge= 22;`: declare and initialize variables
+- **Intrinsic Data Types:**
+
+  - support default constructor
+  - allows create a variable using `new` keyword, which automatically sets the variable to its default value
+  - ex:
+    - `bool b = new bool();`
+    - `int i = new int();`
+  - parsing values from `String`
+    - `int.Parse(your_string);`
+
+## String
+
+- Some members:
+  - Length
+  - Compare()
+  - Contains()
+  - Equals()
+  - Format()
+  - Insert()
+  - PadLeft()
+  - PadRight()
+  - Remove()
+  - Replace()
+  - Split()
+  - Trim()
+  - ToUpper()
+  - ToLower()
+- Concatenation
+  - `+` (actually, this symbol will call: `String.Concat()`)
+- Escape Characters:
+  - `\`
+- Verbatim string
+  - `@"phuong\homie\porsche"`
+  - disable the processing of literal's escape characters
+- Comparing
+  - Although `string` is object, comparing string is just compare the value of *string object*
+- Immutable
+  - string **can not be changed**
+- Interpolation
+  - insert variable to string
+- `StringBuilder`
+  - make strings are mutable
+
+## Type Conversion
+
+- Widening:
+  - no data loss
+  - implicit
+  - example: `short` ====> `int` (widen short to int)
+  - is the term used to define an ***implicit upward cast***
+- Narrowing
+  - data loss
+  - *must* be explicit cast: `(short) myNumber`
+  - if not explicit ====> compiler error
+- `checked` keyword
+  - using when overflow happens!
+- `unchecked` keyword
+  - using when overflow happens
+  - set `checked` project-wide
+- Implicitly typed local variable
+  - `var` keyword
+  - compiler infer the data type of this based on initial value
+  - Restrictions of `var`:
+    - ***just for local variable***
+      - and that variable must have initial value
+      - this initial value must **not** be null
+    - do not use for
+      - return value `public var Add(var1, var2) //illegal`
+      - parameters
+      - field data
+  - Implicit typing results in strongly typed data
+    - can be understand as "dynamic typing"
+    - can not assign another type after declare
+      - `var s = "phuong is here"`
+      - `s = "phuong is not here" // legal`
+      - `s = 22 // illegal`
+  - Why use `var`?
+    - LINQ, and just use when working with LINQ
+
+​
+
+---
+
+# Collection
+
+- Generic containers are often favored over non generic:
+  - greater type safety
+  - performance
+
+## Array
+
+- the most **primitive** container
+- **fixed** size
+- To deal with these limitations, BCL ship a number of namespaces containing *collection classes*
+- *Collection classes* are built to dynamically resize on the fly when *insert* or *remove*
+- 2 big categories of collections:
+  - Non generic collection (`System.Collections` namespace)
+    - typically work with `System.Object` type
+    - loosely typed
+  - Generic collection (`System.Collections.Generic` namespace)
+    - type-safe
+    - `List<T>`: `<T>` is *type parameter*
+
+## Non-generic (`System.Collections`)
+
+- Some of collections:
+  - `ArrayList`
+    - dynamically sized collection of object, listed in sequential order
+  - `BitArray`
+    - compact array of bit values, which are represented as Booleans
+  - `HashTable`
+    - collection of key-value pairs
+    - organized based on the hash code of the key
+  - `Queue`
+    - FIFO collection of object
+  - `SortedList`
+    - key-value pairs collection
+    - sorted by the keys
+    - accessible by key and by index
+  - `Stack`
+    - LIFO
+- **Not use this type of collections much nowadays!!**
+
+## Generic Collections (`System.Collections.Generic`)
+
