value + ref (enum, struct remaining)

--- a/.Net Review.md
+++ b/.Net Review.md
@@ -69,7 +69,7 @@
 
 - Each .NET compilers for different languages compiles nearly identical CIL instructions
 - CIL code must be compiled before use
-- CIL ==JIT Compiler==> CPU instructions (machine code)
+- CIL ====> JIT Compiler ===> CPU instructions (machine code)
 - Jitter cache the result in memory
 
 ### .NET Type Metadata
@@ -178,6 +178,7 @@
 - Verbatim string
   - `@"phuong\homie\porsche"`
   - disable the processing of literal's escape characters
+  - to insert `"`, must use: `""`
 - Comparing
   - Although `string` is object, comparing string is just compare the value of *string object*
 - Immutable
@@ -221,9 +222,175 @@
       - `s = "phuong is not here" // legal`
       - `s = 22 // illegal`
   - Why use `var`?
-    - LINQ, and just use when working with LINQ
+    - LINQ, and just use when working with LINQ!
 
-​
+---
+
+# Method
+
+- By default, parameters sent to function is by **value**
+
+- `out` modifier: 
+
+  - ```c#
+    static void Add(int x, int y, out int ans) {
+      ans = x + y;
+    }
+    ```
+
+  - method use `out` must assign this parameter a value before exit
+
+  - no need to initialize value for `out` parameter before use
+
+  - When to use?
+
+    - when caller need to obtain multiple output on single method call
+
+- `ref` modifier
+
+  - references type **must be initialized** before passing to the function
+
+- `params` modifier
+
+  - pass variable number of identically typed parameters as single logical variable
+
+  - ```C#
+    static double CalculateAverage(params double[] values) {
+      for (int i = 0; i < values.Length; i++)
+    	sum += values[i];
+      return (sum / values.Length);
+    }
+
+    // call
+    double average;
+    average = CalculateAverage(4.0, 3.2, 5.7, 64.22, 87.2);
+    Console.WriteLine("Average of data is: {0}", average);
+    ```
+
+- *optional parameter*
+
+  - ```C#
+    static void ErrorLog(string message, string owner = "programmer") {
+      // method implementaion
+    }
+
+    // call 
+    ErrorLog("syntax error"); // legal
+    ErrorLog("Logic error", "phuong") // also legal
+    ```
+
+  - value for optional parameters **must be known** at compile time and **can not be resolved** at runtime
+
+- named parameters
+
+  - allow to invoke a method by specifying parameters values in any order
+
+  - ```c#
+    static void DisplayFancyMessage(ConsoleColor textColor, ConsoleColor backgroundColor, string message) {
+      // method implementation
+    }
+
+    // call
+    DisplayFancyMessage(message: "Hello, World", textColor: ConsoleColor.Red, backgroundColor: ConsoleColor.White)
+    ```
+
+  - named parameter must be put at the end of method call (after all positional parameters call)
+
+  - When to use?
+
+    - using with optional parameters
+
+## Overloading
+
+- same name, different number (or type) of parameters
+
+---
+
+# Array
+
+- Normal way:
+
+  - `int[] myInts = new int[3] {1,2,3};`
+  - `int[] myInts = new int[2] {1,2,3,4} // illegal`
+  - `string[] stringArray = new string[] { "one", "two", "three" }` 
+
+- Implicit  typed local array
+
+  - for allocating new array without specifying type
+  - ex:
+    - `var a = new [] {1,2,3,4} // a is int[]`
+
+- **can not mixed type in array***
+
+  - => can use array of object
+
+- Multidimensional
+
+  - ```C#
+    // rectangular
+    int[,] myMatrix;
+    myMatrix = new int[3,4];
+
+    // jagged
+    int[][] myJagArray = new int [5][];
+    ```
+
+- Some array's method
+
+  - `Clear()`: set member to `null`, `0` or `false`
+  - `CopyTo()`: copy elements from source array ====> destination array
+  - `Length`: number of items in array
+  - `Rank`: the dimension of array
+  - `Reverse()`: (only with 1 dimension array)
+  - `Sort()`: sort with intrinsic data types
+
+---
+
+# Enum
+
+- value type, a set of key-value pairs
+- value is integer by default (can be changed)
+- flags used for bit-used
+
+
+
+---
+
+# Value types vs References types
+
+- `System.ValueType`: allocate on **stack**. Data that are allocated on **stack** is:
+  - created and destroyed quickly
+  - lifetime is determined by scope
+- Data that are allocated on **heap** is:
+  - monitored by .NET garbage collector
+  - lifetime is determined by many factors
+
+## The assignment operator
+
+- Assign one value type to another, a member-by-member copy of the field  data is achieved
+
+  - ex: 
+    - `int`: the only member to be copied is numerical value
+    - `Point` (a structure, not a class): x -> x, y->y
+
+- Assignment operator for the ref type
+
+  - ex:
+
+    - ```c#
+      // Point now is a class, not a struct
+      Point p1 = new Point(10,2);
+      Point p2 = p1;
+
+      // Now, p2 and p1 point to the same object on the heap
+      // Change p1 or p2 will affect to other
+      ```
+
+## Value type contain ref type
+
+
+
+
 
 ---
 
